--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
-MONGODB_URI=mongodb+srv://artemmolchanov205:4hi4rz0CyDraGCP2@carrental.axbaog1.mongodb.net/
+MONGODB_URI=mongodb://localhost:27017
 
 JWT_SECRET=secret@2025.0000
 
